# ffmpeg

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/site/qifen/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  video.cpp
app/src/main/java/site/qifen/ffmpeg/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/site/qifen/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
